# mge

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  MGE.sln  README.md  game_engane.sln  game_engine.sln
game_engane/: Model.cpp  Model.h  RenderUtils.h  Utils.h  game_engane.vcxproj  game_engane.vcxproj.filters  main.cpp  main.h
game_engane/canvas/: canvas.h
game_engane/canvas/windows/: canvas.h
game_engane/math/: Point.h  Vector.h  math.h  point.cpp  vector.cpp
game_engane/render/: Model.cpp  Model.h  RenderUtils.h
game_engine/: Utils.cpp  Utils.h  game_engine.vcxproj  game_engine.vcxproj.filters  main.cpp  main.h
game_engine/canvas/: canvas.h
game_engine/libs/: GraphicsLibrary.exp  GraphicsLibrary.lib
game_engine/math/: Point.h  Vector.h  mat4.h  math.h  point.cpp  vector.cpp
game_engine/render/: Model.cpp  Model.h  RenderUtils.cpp  RenderUtils.h  Rotate.cpp  Rotate.h
include/GraphicsLibrarry/: RgbColor.h  libs.h
include/MGE/: Utils.hpp
include/MGE/math/: mat4x4.h  mat4x4.hpp  tringles.hpp  vec2.h  vec2.hpp  vec3.h  vec3.hpp
include/MGE/render/: camera.h  clipping.h  drawFun.h  model.h  renderFun.h
libs/: GraphicsLibrary.exp  GraphicsLibrary.lib
libs/GraphicsLibrarry/: GraphicsLibrary.exp  GraphicsLibrary.lib
libs/MGE/render/: camera.cpp  drawFun.cpp  model.cpp
src/: RgbColor.h  lib.h  libs.h  main.cpp  matrix.h
src/math/: Point.h  point.cpp
src/render/: Model.h  RenderUtils.cpp  RenderUtils.h  Rotate.h  Triangle.h
